#283 - Estimation related text wraping issue resolved and maintaining user expanded state on refresh

--- a/src/components/editable-table/EditableGrid.scss
+++ b/src/components/editable-table/EditableGrid.scss
@@ -13,6 +13,18 @@ $default-font-size: 13px;
 $default-row-height: 30px;
 $default-cell-width: 140px;
 
+@mixin string-editor {
+    outline: none;
+    box-shadow: none;
+    font-size: inherit;
+    font-family: inherit;
+    line-height: inherit;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    border: 0px;
+}
+
 div.src-editable-grid-container {
     overflow-x: auto;
     overflow-y: auto;
@@ -36,7 +48,7 @@ div.src-editable-grid-container {
 
             input,
             input:focus {
-                @extend input.string-editor;
+                @include string-editor;
             }
         }
 
@@ -182,14 +194,6 @@ div.src-editable-grid-container {
 
     input.string-editor,
     input.string-editor:focus {
-        outline: none;
-        box-shadow: none;
-        font-size: inherit;
-        font-family: inherit;
-        line-height: inherit;
-        padding: 0;
-        width: 100%;
-        height: 100%;
-        border: 0px;
+        @include string-editor;
     }
 }
